añadida funcionalidad fotos
